syntax="proto3";
option java_package="com.rhanem.customerservice.stub";

service CustomerService {
  rpc saveCustomer(SaveCustomerRequest) returns (SaveCustomerResponse);
  rpc getAllCustomers(GetAllCustomerRequest) returns (GetCustomersResponse);
  rpc getCustomerById(GetCustomerByIdRequest) returns (GetCustomerByIdResponse);
}

message GetAllCustomerRequest {}

message GetCustomersResponse {
  repeated Customer customers = 1;
}

message Customer {
  int64 id=1;
  string name=2;
  string email=3;
}

message GetCustomerByIdRequest {
  int64 CustomerId=1;
}

message GetCustomerByIdResponse {
   Customer customer = 1;
}

message CustomerRequest {
  string name=1;
  string email=2;
}

message SaveCustomerRequest {
  CustomerRequest customer = 1;
}

message SaveCustomerResponse{
  Customer customer = 1;
}
